src/test/ui/exclusive-range/exclusive_range_pattern_syntax_collision2.stderr
error: `X..` range patterns are not supported
  --> $DIR/exclusive_range_pattern_syntax_collision2.rs:5:13
   |
LL |         [_, 99..] => {},
   |             ^^^^ help: try using the maximum value for the type: `99..MAX`

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/exclusive_range_pattern_syntax_collision2.rs:5:13
   |
LL |         [_, 99..] => {},
   |             ^^^^

error[E0527]: pattern requires 2 elements but array has 3
  --> $DIR/exclusive_range_pattern_syntax_collision2.rs:5:9
   |
LL |         [_, 99..] => {},
   |         ^^^^^^^^^ expected 3 elements

error[E0029]: only char and numeric types are allowed in range patterns
  --> $DIR/exclusive_range_pattern_syntax_collision2.rs:5:13
   |
LL |         [_, 99..] => {},
   |             ^^^^ ranges require char or numeric types
   |
   = note: start type: {integer}
   = note: end type: [type error]

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0029, E0527.
For more information about an error, try `rustc --explain E0029`.
